removed unused stuff from html files

--- a/view.html
+++ b/view.html
@@ -8,7 +8,7 @@
 	<script src = "src/jquery-3.0.0.min.js"></script>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-	<link rel="stylesheet" href="css/leaflet.css" />
+	<link rel="stylesheet" href="css/view.css" />
 </head>
 
 <body>
@@ -47,7 +47,7 @@
 	
 </body>
 
-<script src = "src/leaflet.js"> </script>
+<script src = "src/view.js"> </script>
 
 
 </html>
