--- a/report.html
+++ b/report.html
@@ -5,6 +5,9 @@
 <head>
    <meta charset="UTF-8">
    <script src = "src/jquery-3.0.0.min.js"></script>
+   <script src = "src/jquery.validate.js"></script>
+   <script src = "src/additional-methods.js"></script>
+   <script src = "src/jquery.form.js"> </script>
 </head>
 
 
@@ -12,26 +15,35 @@
    <button onclick="randomReport()"> Save random report </button></br>	
    <button onclick ="clearTable()"> Clear Database Table </button><br><br><br>
 
-   <p> Name:</p>
-   <input id = "fag"> </input>
-   
-   <p> Report Title: <p>
-   <input id="title"></input>
-    
-   <p> Report Text: <p>
-   <textarea id = "text" rows = "6" cols = "50"> </textarea>
+<form class="cmxform" id="commentForm" method="post" enctype = "multipart/form-data"  action="src/report.php">
+  <fieldset>
+    <legend>Report</legend>
+    <p>
+      <label for="cname">Name (required, at least 2 characters)</label>
+      <input id="cname" name="name" minlength="2" type="text" required>
+    </p>
+    <p>
+      <label for="ctitle">Report Title (required, at least 2 characters)</label>
+      <input id="ctitle" name="title" minlength="2" type="text" required>
+    </p>
+    <p>
+      <label for="ctext">Report Text (required)</label>
+      <textarea id="ctext" name="text" required></textarea>
+    </p>
+    <p>
+      <label for="cpic">Required, picture files only: </label>
+      <input type="file" id="cpic" name="pic">
+    </p>
+    <p>
+      <input class="submit" type="submit" value="Submit">
+    </p>
+  </fieldset>
+</form>
 
-   <input type='file' />
-   <img id="myImg" src="#" alt="your image" width = 50 height = 50 />
-      
-   <br>
-   <button onclick="saveReport()">Save report</button>
-   <p id = "print"></p>	
 	
 </body>
 
-<script src = "src/gps.js">  </script>
-<script src = "src/leaflet.js"> </script>
+<script src = "src/report.js">  </script>
 
 
 
