finished the report part, mostly. Need to create tests... lmao

--- a/report.html
+++ b/report.html
@@ -33,6 +33,7 @@
     <p>
       <label for="cpic">Required, picture files only: </label>
       <input type="file" id="cpic" name="pic">
+      <img src = "" id = "myImg" height = "50" width = "50"/>
     </p>
     <p>
       <input class="submit" type="submit" value="Submit">
