--- a/view.html
+++ b/view.html
@@ -9,17 +9,24 @@
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 	<link rel="stylesheet" href="css/view.css" />
+	<link rel="stylesheet" href="css/lightbox.css" />
 </head>
 
 <body>
         <div id="mapid"></div>
+        
 
 
+<div id = "buttons">
+        <div id = "report"> </div>
         <button onclick = "getReports()"> Get Reports </button><br>
+        <button onclick = "showReports()"> Show Reports </button><br>
+        <button onclick = "removeReport()"> Remove Reports </button><br>
         <button onclick = "createMarkers()"> Create Markers </button><br><br><br>
 
         <p id = "print"></p>	
-	
+</div>
+        <script src = "src/lightbox.js"> </script>
 </body>
 
 <script src = "src/view.js"> </script>
