grabbed the leaflet scripts and put them on the server. makes sure im not relying on someone else, also interferes with the https

--- a/view.html
+++ b/view.html
@@ -6,8 +6,8 @@
 <head>
         <meta charset="UTF-8">
 	<script src = "src/jquery-3.0.0.min.js"></script>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+	<link rel="stylesheet" href="css/leaflet.css" />
+	<script src="src/leaflet.js"></script>
 	<link rel="stylesheet" href="css/view.css" />
 	<link rel="stylesheet" href="css/lightbox.css" />
 </head>
