finished first iteration of filtering

--- a/report.html
+++ b/report.html
@@ -32,6 +32,10 @@
       <input type="file" id="cpic" name="pic">
       <img src = "" id = "myImg" height = "50" width = "50"/>
     </p>
+   <!-- <p>
+      <label for="cvid">Video: </label>
+      <input type="file" id="cvid" name="vid">
+    </p> --!>
     <p>
       <input class="submit" type="submit" value="Submit">
     </p>
