added loading ajax animations

--- a/report.html
+++ b/report.html
@@ -8,6 +8,7 @@
    <script src = "src/jquery.validate.js"></script>
    <script src = "src/additional-methods.js"></script>
    <script src = "src/jquery.form.js"> </script>
+   <link rel="stylesheet" href="css/report.css" />
 </head>
 
 
@@ -28,7 +29,7 @@
       <textarea id="ctext" name="text" required></textarea>
     </p>
     <p>
-      <label for="cpic">Required, picture files only: </label>
+      <label for="cpic">Required, picture/video files only: </label>
       <input type="file" id="cpic" name="pic">
       <img src = "" id = "myImg" height = "50" width = "50"/>
     </p>
@@ -42,6 +43,7 @@
   </fieldset>
 </form>
 
+<div class="modal"><!-- Place at bottom of page --></div>
 	
 </body>
 
