finished another iteration of ui for report. added the jqueri-ui library. Changed a bunch of stuff to support the different filtering modes

--- a/report.html
+++ b/report.html
@@ -9,12 +9,15 @@
    <script src = "src/additional-methods.js"></script>
    <script src = "src/jquery.form.js"> </script>
    <link rel="stylesheet" href="css/report.css" />
+	<link rel="stylesheet" href="css/jquery-ui.css" />
+	<link rel="stylesheet" href="css/jquery-ui.structure.css" />
+	<link rel="stylesheet" href="css/jquery-ui.theme.css" />
+	<script src="src/jquery-ui.js"></script>
 </head>
 
 
 <body onload = "updateNames()" >
    <button onclick="randomReport()"> Save random report </button></br>	
-   <button onclick ="clearTable()"> Clear Database Table </button><br><br><br>
 
 <form class="cmxform" action = ""  id="commentForm" method="post" enctype = "multipart/form-data">
   <fieldset>
