--- a/view.html
+++ b/view.html
@@ -39,7 +39,7 @@
         <label for = "realtime"> Realtime </label>
         <input type = "checkbox" name = "cbox1" id = "realtime"></input><br>
 
-        <p id = "print"></p>	
+        <p hidden id = "print"></p>	
     </fieldset>
    </div>
 </div>
