more ui changes, added different markers

--- a/report.html
+++ b/report.html
@@ -20,9 +20,9 @@
   <fieldset>
     <legend>Report</legend>
     <p>
-      <label for="cname">User</label>
+      <label for="cname">Name</label>
       <select required id = "cname" name ="name"> </select>
-      <a href = "register.html">Create New User</a>
+      <a href = "register.html">Create New Name</a>
     </p>
     <p>
       <label for="ctext">Report Text (required)</label>
@@ -30,7 +30,7 @@
     </p>
     <p>
       <label for="cpic">Required, picture/video files only: </label>
-      <input type="file" id="cpic" name="pic">
+      <input multiple type="file" id="cpic" name="pic">
     </p>
    <!-- <p>
       <label for="cvid">Video: </label>
