--- a/view.html
+++ b/view.html
@@ -7,7 +7,6 @@
 
         <meta charset="UTF-8">
 	<script src = "src/jquery-3.0.0.min.js"></script>
-	<link rel="stylesheet" href="css/leaflet.css" />
 	<script src="src/leaflet.js"></script>
 	<link rel="stylesheet" href="css/view.css" />
 	<link rel="stylesheet" href="css/lightbox.css" />
@@ -15,6 +14,10 @@
 	<link rel="stylesheet" href="css/jquery-ui.structure.css" />
 	<link rel="stylesheet" href="css/jquery-ui.theme.css" />
 	<script src="src/jquery-ui.js"></script>
+	<link rel="stylesheet" href="css/leaflet.css" />
+	<link rel="stylesheet" href="css/MarkerCluster.css" />
+	<link rel="stylesheet" href="css/MarkerCluster.Default.css" />
+	<script src="src/leaflet.markercluster-src.js"></script>
 </head>
 
 <body>
