changed marker cluster source files to zoom on clusters correctly in an extremely hacky way, more ui improvements

--- a/view.html
+++ b/view.html
@@ -21,7 +21,9 @@
 </head>
 
 <body>
-       
+<div hidden id="dialog-confirm" title="Delete This Report?">
+  <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>This report will be removed from the map and permanently deleted from the database and cannot be recovered. Are you sure?</p>
+</div>
 <div id="mapid"></div>
 
 <div id ="sidebar">
