changed a lot of misc things , like making sure there are no duplicated register names, did some more tweaking in the cluster, etc

--- a/register.html
+++ b/register.html
@@ -19,6 +19,7 @@
     <p>
       <label for="cteamid">Team ID #</label>
       <select required id = "cteamid" name ="teamid"> 
+         <option selected disabled> Choose Team ID </option>
          <option value = 1> 1 </option>
          <option value = 2> 2 </option>
          <option value = 3> 3 </option>
