--- a/report.html
+++ b/report.html
@@ -21,7 +21,9 @@
     <legend>Report</legend>
     <p>
       <label for="cname">Name</label>
-      <select required id = "cname" name ="name"> </select>
+      <select required id = "cname" name ="name"> 
+      <option selected disabled> Choose Name </option>
+      </select>
       <a href = "register.html">Create New Name</a>
     </p>
     <p>
