--- a/view.html
+++ b/view.html
@@ -55,10 +55,10 @@
         <input type = "checkbox" name = "cbox1" id = "realtime"></input><br>
 
         <p hidden id = "print"></p>	
+<button id = "logout">Logout </button>
     </fieldset>
    </div>
 </div>
-
   
 <script src = "src/lightbox.js"> </script>
 
