--- a/login.html
+++ b/login.html
@@ -1,16 +1,15 @@
 <html>
 
 <head>
-	<script src = "src/jquery-3.0.0.min.js"></script>
-	<script src="src/bootstrap.js"></script>
-	<link rel="stylesheet" href="css/bootstrap.css" />
-	<link rel="stylesheet" href="css/bootstrap-theme.css" />
-	<link rel="stylesheet" href="css/login.css" />
-	<link rel="stylesheet" href="css/jquery-ui.css" />
-	<link rel="stylesheet" href="css/jquery-ui.structure.css" />
-	<link rel="stylesheet" href="css/jquery-ui.theme.css" />
-	<script src="src/jquery-ui.js"></script>
-
+   <script src = "src/jquery-3.0.0.min.js"></script>
+   <script src="src/bootstrap.js"></script>
+   <link rel="stylesheet" href="css/bootstrap.css" />
+   <link rel="stylesheet" href="css/bootstrap-theme.css" />
+   <link rel="stylesheet" href="css/login.css" />
+   <link rel="stylesheet" href="css/jquery-ui.css" />
+   <link rel="stylesheet" href="css/jquery-ui.structure.css" />
+   <link rel="stylesheet" href="css/jquery-ui.theme.css" />
+   <script src="src/jquery-ui.js"></script>
 </head>
 
 <div class="login-page">
@@ -18,8 +17,9 @@
       <input id = "username" type="text" placeholder="username"/>
       <input id = "password"  type="password" placeholder="password"/>
       <button id = "submit">login</button>
+      <a href = "index.html"> Back to Homepage </a>
   </div>
 </div>
 
-        <script src = "src/login.js"></script>
+<script src = "src/login.js"></script>
 </html>
