added scroolto jquery plugin, removed teamID in register name at request of jack, made report.php use only parametzied sql queries

--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
 <form class="cmxform" id="registerForm" method="post" enctype = "multipart/form-data">
   <fieldset>
     <legend>Register</legend>
-    <p>
+    <p hidden>
       <label for="cteamid">Team ID #</label>
       <select required id = "cteamid" name ="teamid"> 
          <option selected disabled> Choose Team ID </option>
