--- a/report.html
+++ b/report.html
@@ -14,7 +14,7 @@
 
 
 <body onload = "updateNames()" >
-   <button onclick="randomReport()"> Save random report </button></br>	
+ <!--  <button onclick="randomReport()"> Save random report </button></br>--!>	
 
 <form class="cmxform" action = ""  id="commentForm" method="post" enctype = "multipart/form-data">
   <fieldset>
