--- a/view.html
+++ b/view.html
@@ -14,6 +14,7 @@
    <link rel="stylesheet" href="css/MarkerCluster.css" />
    <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
    <script src="src/leaflet.markercluster-src.js"></script>
+   <script src="src/jquery-scrollto.js"></script>
 </head>
 
 <body>
