added Fallback gps/timestamp booleans into the mysql records and the view. You also can edit these statuses in edit

--- a/view.html
+++ b/view.html
@@ -33,6 +33,10 @@
    <input id = "timestamp" type = "text"> </input> <br>
    <label for = "text"> Text : </label>
    <textarea id="text" rows = "5" cols = "30"></textarea>
+   <label for = "def_gps"> Fallback GPS : </label>
+   <input type = "checkbox" id = "def_gps"></input>
+   <label for = "def_timestamp"> Fallback Timestamp : </label>
+   <input type = "checkbox" id = "def_timestamp"></input>
 </div>
 
 <div id="mapid"></div>
