finished report test files, adjust report.js/report.php to support the tests. not sure if this is the correct way to go about making sure the tests work....

--- a/report.html
+++ b/report.html
@@ -13,7 +13,7 @@
 </head>
 
 
-<body onload = "updateNames()" >
+<body>
  <!--  <button onclick="randomReport()"> Save random report </button></br>--!>	
 
 <form class="cmxform" action = ""  id="commentForm" method="post" enctype = "multipart/form-data">
