--- a/tests.html
+++ b/tests.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width">
   <title>QUnit Example</title>
   <link rel="stylesheet" href="css/qunit-2.0.1.css">
+   <script src = "src/jquery-3.0.0.min.js"></script>
+   <script src = "src/jquery.validate.js"></script>
+   <script src = "src/additional-methods.js"></script>
+   <script src = "src/jquery.form.js"> </script>
+  <script src="src/qunit-2.0.1.js"></script>
+  <script src="src/test.report.js"></script>
+  <script src="src/report.js"></script>
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="src/qunit-2.0.1.js"></script>
-  <script src="src/test.report.js"></script>
 </body>
 </html>
