--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
     </p>
     <p>
       <label for="namereg">Name: </label > <br>
-      <input required type="text" id = "cname" name ="namereg"> </input>
+      <input required type="text" id = "name" name ="namereg"> </input>
     </p>
     <p>
       <input class="submit" type="submit" value="Submit">
